[gd_scene load_steps=7 format=3 uid="uid://d3r4w12j3w543"]

[ext_resource type="Script" uid="uid://ba8e5ytpj6ajc" path="res://Scenes/Player/needle_laser.gd" id="1_dsf08"]
[ext_resource type="Texture2D" uid="uid://13trc2cvbynb" path="res://Assets/Ships/Upgrades/LaserReticle.png" id="2_jcipm"]
[ext_resource type="Shader" uid="uid://cxiwm3v6xvwvr" path="res://Shaders/Flare.gdshader" id="3_bh5u1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bkho5"]
atlas = ExtResource("2_jcipm")
region = Rect2(14, 14, 4, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2sln"]
atlas = ExtResource("2_jcipm")
region = Rect2(19, 14, 4, 4)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dupgu"]
shader = ExtResource("3_bh5u1")
shader_parameter/Color1 = Color(1, 1, 1, 1)
shader_parameter/Color2 = Color(1, 0.5, 0.5, 0)
shader_parameter/threshold = 1.505
shader_parameter/distFadeOffset = 5.16
shader_parameter/distFadePerLayer = 0.2
shader_parameter/layers = 3
shader_parameter/seedOffset = 5.42
shader_parameter/speed = 1.0
shader_parameter/lenCoef = 0.905
shader_parameter/sharpness = 7.07107

[node name="NeedleLaser" type="Node2D"]
script = ExtResource("1_dsf08")

[node name="LaserLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 40.4781, -121.431)
width = 1.0
default_color = Color(nan, nan, nan, nan)
begin_cap_mode = 2
end_cap_mode = 2

[node name="LaserTarget" type="Marker2D" parent="."]
position = Vector2(40.4781, -121.431)

[node name="LaserRay" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(40.4781, -121.431)

[node name="Endpoint" type="Marker2D" parent="."]
position = Vector2(40.4781, -121.431)

[node name="Sprite2D" type="Sprite2D" parent="Endpoint"]
texture = SubResource("AtlasTexture_bkho5")

[node name="Color" type="Sprite2D" parent="Endpoint"]
modulate = Color(nan, nan, nan, nan)
texture = SubResource("AtlasTexture_y2sln")

[node name="ArtemisReticle" type="ColorRect" parent="Endpoint"]
visible = false
material = SubResource("ShaderMaterial_dupgu")
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
